[package]
name = "FabChess"
version = "0.1.0"
authors = ["fabianvdW"]
edition = "2018"

[dependencies]
lazy_static = "1.2.0"
rand = "0.6.4"
tokio = "0.1.19"
tokio-process="0.2"
tokio-io="0.1.12"
serde={version = "1.0.94", features= ["derive"]}
serde_json = "1.0"
[profile.release]
opt-level=3
debug=false
lto=true
[profile.test]
opt-level=3
debug=true
[lib]
name="core"
path= "src/lib.rs"
[[bin]]
name="fabchess"
path="src/main.rs"
[[bin]]
name="referee"
path="src/testing/referee.rs"
