[package]
name = "core-sdk"
version = "0.1.0"
authors = ["fabianvdW <fabianvonderwarth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
texel-tuning = []
display-eval = []
[dependencies]
lazy_static = "1.4.0"
rand = "0.7.3"
