[package]
name = "core-sdk"
version = "0.1.0"
authors = ["fabianvdW <fabianvonderwarth@gmail.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
texel-tuning = []
display-eval = []
avoid-adj = []
[dependencies]
rand = "0.7.3"
[build-dependencies]
rand = "0.7.3"
