[package]
name = "core-sdk"
version = "0.1.0"
authors = ["fabianvdW <fabianvonderwarth@gmail.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["nn-eval"]
texel-tuning = []
nn-eval = ["ndarray"]
display-eval = []
avoid-adj = []
[dependencies]
rand = "0.7.3"
ndarray = { version = "0.13.1", optional = true}
[build-dependencies]
rand = "0.7.3"
