[package]
name = "experimental"
version = "0.1.0"
authors = ["fabianvdW <fabianvonderwarth@gmail.com>"]
edition = "2018"

[dependencies.core-sdk]
path = "../core-sdk"
default-features = false
features = ["texel-tuning"]
[dependencies.extended-sdk]
path = "../extended-sdk"
[dependencies.tuning]
path = "../tuning"