[package]
name = "extended-sdk"
version = "0.1.0"
authors = ["fabianvdW <fabianvonderwarth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-sdk = {path = "../core-sdk"}
rand = "0.7.3"
chrono = "0.4.11"
hostname = "0.3.1"