[package]
name = "referee"
version = "0.1.0"
authors = ["fabianvdW <fabianvonderwarth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-sdk = {path="../core-sdk"}
extended-sdk = {path = "../extended-sdk"}
rand = "0.7.3"
serde={version = "1.0.106", features= ["derive"]}
serde_json = "1.0"
chrono = "0.4.11"
[dependencies.tokio]
version = "0.2.19"
features = ["process", "rt-core", "io-util", "time", "stream", "rt-threaded"]
[dependencies.log]
version = "0.4.8"
features = ["std"]