[package]
name = "tests"
version = "0.1.0"
authors = ["fabianvdW <fabianvonderwarth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
core-sdk = {path = "../core-sdk"}
extended-sdk = {path = "../extended-sdk"}