[package]
name = "tuning"
version = "0.1.0"
authors = ["fabianvdW <fabianvonderwarth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.7.3"
[dependencies.core-sdk]
path = "../core-sdk"
default-features = false
features = ["texel-tuning"]
[lib]
name = "tuning"
path = "src/lib.rs"
[[bin]]
name = "tuning"
path = "src/main.rs"
[[bin]]
name = "preparation"
path = "src/preparation.rs"
